tests/misc/tinc.nim
discard """
  errormsg: "type mismatch: got <int>"
  file: "tinc.nim"
  line: 8
"""
var x = 0

inc(x+1)
